@@ -5,6 +5,7 @@ munin (2.0.42-6) UNRELEASED; urgency=medium
   * Fix permissions of test files.
   * Unify usage of comma/whitespace in debian/tests/control.
   * Use more verbose tests for "expect no files".
+  * Tests: tolerate stderr output of "munindoc" for now.
 
  -- Lars Kruse <devel@sumpfralle.de>  Sun, 11 Nov 2018 16:01:17 +0100
 
